gateway/ReferenceGrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: proxy-public 
  namespace: dev-ai
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: default 
  - group: gateway.networking.k8s.io
    kind: TCPRoute
    namespace: default 
  to:
  - group: ""
    kind: Service
