gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
  name: eg
  namespace: default
spec:
  gatewayClassName: eg
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: dev-ai.cloud-testing.io
    name: https-dev-ai
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: ai-dev-https
      mode: Terminate
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: dev-ai.cloud-testing.io
    name: http-dev-ai
    port: 80
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: keycloak.cloud-testing.io
    name: https-keycloak
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: keycloak-https
      mode: Terminate
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: keycloak.cloud-testing.io
    name: http-keycloak
    port: 80
    protocol: HTTP
