gateway/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ai-dev 
  namespace: default
spec:
  hostnames:
    - ai-dev.cloud-testing.io
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: proxy-public 
          namespace: ai-dev 
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: default
spec:
  hostnames:
  - kc-ai.cloud-testing.io
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: eg
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: keycloak-keycloakx-http
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
